Fixed left aligning tech text too

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -41,7 +41,7 @@ a {
   margin: 0 auto;
 }
 .tech {
-  text-align: left;
+  text-align: center;
 
   padding: 0 1px;
   margin: 0.8em;
